apps/rustfs/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-httproute
  namespace: rustfs
spec:
  hostnames:
  - rustfs.lab.mpopov.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: networking
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rustfs-svc
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
